# blinkstick-python

./: pyproject.toml
docs/: conf.py  index.rst
docs/api/: backends.rst  clients.rst  colors.rst  exceptions.rst  index.rst  utilities.rst  variants.rst
docs/modules/: blinkstick.backends.base.rst  blinkstick.backends.rst  blinkstick.backends.unix_like.rst  blinkstick.backends.win32.rst  blinkstick.blinkstick.rst  blinkstick.colors.rst  blinkstick.constants.rst  blinkstick.exceptions.rst  blinkstick.rst  blinkstick.utilities.rst
docs/usage/: index.rst
docs/usage/cli_tool/: index.rst
docs/usage/examples/: find_by_serial.rst  get_info.rst  index.rst  infoblocks.rst  set_random_color.rst
src/blinkstick/: __init__.py  blinkstick.py  colors.py  utilities.py
src/blinkstick/backends/: base.py  unix_like.py  win32.py
